--- a/styles/style.css
+++ b/styles/style.css
@@ -33,10 +33,10 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 25px;
 }
 main .card {
   background-color: #14253d;
-  height: 545px;
   width: 330px;
   padding: 25px;
   border-radius: 1.3rem;
@@ -47,32 +47,62 @@ main .card {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow: hidden;
 }
 main .card .cover-container {
   cursor: pointer;
   width: 100%;
-  aspect-ratio: 1;
-  background: url(/images/image-equilibrium.jpg);
-  background-size: contain;
+  border-radius: 0.5rem;
+  position: relative;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+}
+main .card .cover-container:hover {
+  background-color: #00fff7;
+}
+main .card .cover-container:hover > img {
+  opacity: 0.5;
+}
+main .card .cover-container > img {
+  width: 100%;
+  opacity: 1;
+  display: block;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
   border-radius: 0.5rem;
 }
+main .card .cover-container > img:hover {
+  opacity: .5;
+}
 main .card .cover-container .img-overlay {
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  position: absolute;
   opacity: 0;
-  width: 100%;
+  left: 50%;
   height: 100%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 0.5rem;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+main .card .cover-container .img-overlay img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
 }
 main .card .cover-container .img-overlay:hover {
-  background: #00fff7;
-  opacity: .6;
+  opacity: 1;
   border-radius: 0.5rem;
 }
 main .card h1 {
